# AndroidNDKDemo

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/shixin/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: androidLog.cpp  c_call_super_method.cpp  c_use_java_obj.cpp  c_use_java_static.cpp  crash_test.cpp  native-lib.cpp  set_in_value.cpp  udptest.cpp
app/src/main/java/shixin/ndkdemo/: MainActivity.java
app/src/main/java/shixin/ndkdemo/obj_test/: ObjectTest.java
app/src/main/java/shixin/ndkdemo/static_test/: StaticClassTest.java
app/src/main/java/shixin/ndkdemo/supermethod/: Beibi.java  People.java
app/src/test/java/shixin/ndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
